tests/errors/construction/initializer-duplicate-field.fn
---
Description: Initializer specifies the same field twice
Expected: FN3604
---

type Vector2
{
    x: f32
    y: f32
    init{}
}

type Program
{
    fn Main -> i32
    {
        var v = Vector2 { x: 1.0, x: 2.0 }
        return 0
    }
}
